--- a/editor/package.json
+++ b/editor/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
-    "@cpmdevops/whiteboard": "^0.1.7",
     "@craco/craco": "^7.1.0",
-    "@excalidraw/excalidraw": "^0.15.3",
     "@google/generative-ai": "^0.24.1",
     "@monaco-editor/react": "^4.7.0",
     "@tldraw/sync": "^4.0.2",
@@ -16,11 +14,9 @@
     "axios": "^1.6.8",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.1",
-    "fabric": "^6.7.1",
     "framer-motion": "^12.23.12",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
-    "konva": "^10.0.2",
     "lucide-react": "^0.544.0",
     "monaco-editor": "^0.53.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
@@ -32,11 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.3",
-    "react-fabric": "^0.4.1",
-    "react-fabricjs": "^0.1.6",
     "react-icons": "^4.12.0",
-    "react-konva": "^18.2.14",
-    "react-konva-utils": "^2.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
@@ -79,7 +71,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "proxy": "http://localhost:8080",
+    "proxy": "https://syncforge-ide-v2.onrender.com",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
